# sroc

./: README.md  pyproject.toml
.github/workflows/: python-publish.yml
pySROC/: __init__.py  canvas.py  files.py  overlay.py  structure.py
sroc/: __init__.py  canvas.py  overlay.py
