[tool.poetry]
name = "pySROC"
version = "0.1.0"
description = "Straight Rectangles on Canvas for Python"
authors = ["Giovanni Cascione <ing.cascione@gmail.com>"]
license = "GPL-3.0"
readme = "README.md"
homepage = "https://github.com/spleen1981/pySROC"

[tool.poetry.dependencies]
python = "^3.8"
opencv-python = "^4.5.3"
matplotlib = "^3.4.3"
numpy = "^1.21.2"

[tool.poetry.group.dev.dependencies]
pytest = "^6.2"

[tool.poetry.packages]
packages = [
    { include = "pySROC" }
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
