[tool.poetry]
name = "sroc"
version = "0.2.3"
description = "Straight Rectangles on Canvas"
authors = ["Giovanni Cascione <ing.cascione@gmail.com>"]
license = "GPL-3.0"
readme = "README.md"
homepage = "https://github.com/spleen1981/pySROC"

[tool.poetry.dependencies]
python = "^3.8"
opencv-python = "^4.5.3"
matplotlib = "^3.4.3"
numpy = "^1.21.2"

[tool.poetry.group.dev.dependencies]
pytest = "^6.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
